Change title and error message in index.html
Signed-off-by: Hisamwahyudi  <hasbiimut8@gmail.com>

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body {
 </style>
 <body>
   <div class="wadah">
-  <h1>KALKULATOR HISAM</h1>
+  <h1>KALKULATOR SEDERHANA</h1>
   <div class="card">
   <input type="text" id="layar" placeholder="0">
   </br>
@@ -132,7 +132,7 @@ body {
       try {
         layar.value = eval(layar.value);
     }catch(err) {
-      layar.value = "I LOVE YOU💖🥰"
+      layar.value = "EROR🫩"
     }
 
     }
